--- a/catalog.html
+++ b/catalog.html
@@ -32,13 +32,16 @@
 
       <div class="container">
         <section class="about-store">
-          <p class="tagline">Интернет-магазин строительных материалов<br>и инструментов для ремонта</p>
+          <p class="tagline">Интернет-магазин строительных материалов и инструментов для ремонта</p>
           <div class="contacts">
             <p class="telephone">+7 (812) 555-05-55</p>
             <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
           <div class="personal">
-            <a href="#" class="name">Равшан Джамшутович</a>
+            <div class="name-wrapper">
+              <a href="#" class="name">Равшан Джамшутович</a>
+              <a href="#" class="icon-logout"><span class="visually-hidden">Выход</span></a>
+            </div>
             <ul class="personal-navigation">
               <li><a href="#" class="link">Мои заказы</a></li>
               <li><a href="#" class="link">Личный кабинет</a></li>
@@ -50,7 +53,7 @@
           <ul class="site-navigation">
             <li><a class="link" href="index.html">Главная</a></li>
             <li><a class="link" href="#">Компания</a></li>
-            <li><a class="link" href="catalog.html">Каталог</a></li>
+            <li><a class="link">Каталог</a></li>
             <li><a class="link" href="#">Новости</a></li>
             <li><a class="link" href="#">Спецпредложения</a></li>
             <li><a class="link" href="#">Доставка</a></li>
@@ -195,14 +198,14 @@
 
                   <li class="item">
                     <div class="actions">
-                      <button class="button button-green">Купить</button>
-                      <button class="button button-border-green">В закладки</button>
+                      <a href="#" class="button button-green">Купить</a>
+                      <a href="#" class="button button-border-green">В закладки</a>
                     </div>
                     <div class="image">
                       <img src="img/product_2.jpg" width="127" height="89" alt="Перфоратор BOSCH BFG 3000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
-                    <p class="old-price">22500 Р.</p>
+                    <del class="old-price">22500 Р.</del>
                     <div class="price-wrapper">
                       <p class="price">15500 Р.</p>
                     </div>
@@ -210,14 +213,14 @@
 
                   <li class="item">
                     <div class="actions">
-                      <button class="button button-green">Купить</button>
-                      <button class="button button-border-green">В закладки</button>
+                      <a href="#" class="button button-green">Купить</a>
+                      <a href="#" class="button button-border-green">В закладки</a>
                     </div>
                     <div class="image">
                       <img src="img/product_3.jpg" width="144" height="83" alt="Перфоратор BOSCH BFG 6000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
-                    <p class="old-price">30500 Р.</p>
+                    <del class="old-price">30500 Р.</del>
                     <div class="price-wrapper">
                       <p class="price">25500 Р.</p>
                     </div>
@@ -225,8 +228,8 @@
 
                   <li class="item new">
                     <div class="actions">
-                      <button class="button button-green">Купить</button>
-                      <button class="button button-border-green">В закладки</button>
+                      <a href="#" class="button button-green">Купить</a>
+                      <a href="#" class="button button-border-green">В закладки</a>
                     </div>
                     <div class="image">
                       <img src="img/product_4.jpg" width="127" height="89" alt="Перфоратор BOSCH BFG 2000">
@@ -239,14 +242,14 @@
 
                   <li class="item">
                     <div class="actions">
-                      <button class="button button-green">Купить</button>
-                      <button class="button button-border-green">В закладки</button>
+                      <a href="#" class="button button-green">Купить</a>
+                      <a href="#" class="button button-border-green">В закладки</a>
                     </div>
                     <div class="image">
                       <img src="img/product_2.jpg" width="127" height="89" alt="Перфоратор BOSCH BFG 3000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
-                    <p class="old-price">22500 Р.</p>
+                    <del class="old-price">22500 Р.</del>
                     <div class="price-wrapper">
                       <p class="price">15500 Р.</p>
                     </div>
@@ -254,14 +257,14 @@
 
                   <li class="item new">
                     <div class="actions">
-                      <button class="button button-green">Купить</button>
-                      <button class="button button-border-green">В закладки</button>
+                      <a href="#" class="button button-green">Купить</a>
+                      <a href="#" class="button button-border-green">В закладки</a>
                     </div>
                     <div class="image">
                       <img src="img/product_3.jpg" width="144" height="83" alt="Перфоратор BOSCH BFG 6000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
-                    <p class="old-price">30500 Р.</p>
+                    <del class="old-price">30500 Р.</del>
                     <div class="price-wrapper">
                       <p class="price">25500 Р.</p>
                     </div>
@@ -269,8 +272,8 @@
 
                   <li class="item">
                     <div class="actions">
-                      <button class="button button-green">Купить</button>
-                      <button class="button button-border-green">В закладки</button>
+                      <a href="#" class="button button-green">Купить</a>
+                      <a href="#" class="button button-border-green">В закладки</a>
                     </div>
                     <div class="image">
                       <img src="img/product_4.jpg" width="127" height="89" alt="Перфоратор BOSCH BFG 2000">
@@ -283,14 +286,14 @@
 
                   <li class="item new">
                     <div class="actions">
-                      <button class="button button-green">Купить</button>
-                      <button class="button button-border-green">В закладки</button>
+                      <a href="#" class="button button-green">Купить</a>
+                      <a href="#" class="button button-border-green">В закладки</a>
                     </div>
                     <div class="image">
                       <img src="img/product_2.jpg" width="127" height="89" alt="Перфоратор BOSCH BFG 3000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
-                    <p class="old-price">22500 Р.</p>
+                    <del class="old-price">22500 Р.</del>
                     <div class="price-wrapper">
                       <p class="price">15500 Р.</p>
                     </div>
@@ -298,14 +301,14 @@
 
                   <li class="item">
                     <div class="actions">
-                      <button class="button button-green">Купить</button>
-                      <button class="button button-border-green">В закладки</button>
+                      <a href="#" class="button button-green">Купить</a>
+                      <a href="#" class="button button-border-green">В закладки</a>
                     </div>
                     <div class="image">
                       <img src="img/product_3.jpg" width="144" height="83" alt="Перфоратор BOSCH BFG 6000">
                     </div>
                     <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
-                    <p class="old-price">30500 Р.</p>
+                    <del class="old-price">30500 Р.</del>
                     <div class="price-wrapper">
                       <p class="price">25500 Р.</p>
                     </div>
@@ -313,8 +316,8 @@
 
                   <li class="item">
                     <div class="actions">
-                      <button class="button button-green">Купить</button>
-                      <button class="button button-border-green">В закладки</button>
+                      <a href="#" class="button button-green">Купить</a>
+                      <a href="#" class="button button-border-green">В закладки</a>
                     </div>
                     <div class="image">
                       <img src="img/product_4.jpg" width="127" height="89" alt="Перфоратор BOSCH BFG 2000">
@@ -330,7 +333,7 @@
               <section class="pagination">
                 <h2 class="visually-hidden">Постраничная навигация</h2>
                 <ul>
-                  <li><a href="#" class="button button-white active">1</a></li>
+                  <li><a class="button button-white active">1</a></li>
                   <li><a href="#" class="button button-white">2</a></li>
                   <li><a href="#" class="button button-white">3</a></li>
                   <li><a href="#" class="button button-white">Следующая</a></li>
@@ -386,8 +389,8 @@
               <a href="#" class="icon-insta"><span class="visually-hidden">Instagram</span></a>
             </li>
           </ul>
-          <p class="callback">Обратная связь:<br><a href="#">mail@htmlacademy.ru</a></p>
-          <p class="author">Разработанно -<br>
+          <p class="callback">Обратная связь: <a href="#">mail@htmlacademy.ru</a></p>
+          <p class="author">Разработанно -
             <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a>
           </p>
         </div>
