--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="main-header">
       <section class="top-navigation">
         <div class="container flex-container">
-          <a href="index.html" class="logo">Техномарт</a>
+          <a class="logo">Техномарт</a>
           <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
             <label class="visually-hidden" for="search-field">Поиск</label>
             <input type="search" id="search-field" class="search-field" name="search" placeholder="Поиск:">
@@ -32,7 +32,7 @@
 
       <div class="container">
         <section class="about-store">
-          <p class="tagline">Интернет-магазин строительных материалов<br>и инструментов для ремонта</p>
+          <p class="tagline">Интернет-магазин строительных материалов и инструментов для ремонта</p>
           <div class="contacts">
             <p class="telephone">+7 (812) 555-05-55</p>
             <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -47,7 +47,7 @@
 
         <nav class="main-navigation">
           <ul class="site-navigation">
-            <li><a class="link" href="index.html">Главная</a></li>
+            <li><a class="link">Главная</a></li>
             <li><a class="link" href="#">Компания</a></li>
             <li><a class="link" href="catalog.html">Каталог</a></li>
             <li><a class="link" href="#">Новости</a></li>
@@ -131,14 +131,14 @@
           <ul class="list">
             <li class="item">
               <div class="actions">
-                <button class="button button-green">Купить</button>
-                <button class="button button-border-green">В закладки</button>
+                <a href="#" class="button button-green">Купить</a>
+                <a href="#" class="button button-border-green">В закладки</a>
               </div>
               <div class="image">
                 <img src="img/product_1.jpg" width="184" height="81" alt="Перфоратор BOSCH BFG 9000">
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 9000</h3>
-              <p class="old-price">32500 Р.</p>
+              <del class="old-price">32500 Р.</del>
               <div class="price-wrapper">
                 <p class="price">25500 Р.</p>
               </div>
@@ -146,14 +146,14 @@
 
             <li class="item">
               <div class="actions">
-                <button class="button button-green">Купить</button>
-                <button class="button button-border-green">В закладки</button>
+                <a href="#" class="button button-green">Купить</a>
+                <a href="#" class="button button-border-green">В закладки</a>
               </div>
               <div class="image">
                 <img src="img/product_2.jpg" width="127" height="89" alt="Перфоратор BOSCH BFG 3000">
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
-              <p class="old-price">22500 Р.</p>
+              <del class="old-price">22500 Р.</del>
               <div class="price-wrapper">
                 <p class="price">15500 Р.</p>
               </div>
@@ -161,14 +161,14 @@
 
             <li class="item">
               <div class="actions">
-                <button class="button button-green">Купить</button>
-                <button class="button button-border-green">В закладки</button>
+                <a href="#" class="button button-green">Купить</a>
+                <a href="#" class="button button-border-green">В закладки</a>
               </div>
               <div class="image">
                 <img src="img/product_3.jpg" width="144" height="83" alt="Перфоратор BOSCH BFG 6000">
               </div>
               <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
-              <p class="old-price">30500 Р.</p>
+              <del class="old-price">30500 Р.</del>
               <div class="price-wrapper">
                 <p class="price">25500 Р.</p>
               </div>
@@ -176,8 +176,8 @@
 
             <li class="item new">
               <div class="actions">
-                <button class="button button-green">Купить</button>
-                <button class="button button-border-green">В закладки</button>
+                <a href="#" class="button button-green">Купить</a>
+                <a href="#" class="button button-border-green">В закладки</a>
               </div>
               <div class="image">
                 <img src="img/product_4.jpg" width="127" height="89" alt="Перфоратор BOSCH BFG 2000">
@@ -231,20 +231,21 @@
           <p>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           <div class="tabs-wrapper">
             <ul class="tabs">
-              <li><button class="tab active">Доставка</button></li>
-              <li><button class="tab">Гарантия</button></li>
-              <li><button class="tab">Кредит</button></li>
+              <li><a href="#tab-1" class="tab active">Доставка</a></li>
+              <li><a href="#tab-2" class="tab">Гарантия</a></li>
+              <li><a href="#tab-3" class="tab">Кредит</a></li>
             </ul>
             <ul class="tabs-content">
-              <li class="tab-content bg-img-delivery active">
+              <li class="tab-content bg-img-delivery active" id="tab-1">
                 <h3>Доставка</h3>
-                <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш этаж!</p>
+                <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!</p>
+                <p>Ведь мы неплохо заработаем,<br>поднимая его на ваш этаж!</p>
               </li>
-              <li class="tab-content bg-img-guarantee">
+              <li class="tab-content bg-img-guarantee" id="tab-2">
                 <h3>Гарантия</h3>
-                <p>Если купленный у нас товар поломается или заискрит,<br>а также в случае пожара, спровоцированного его возгаранием,<br>вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br>сгоревший товар на новый.<br>Дом уж восстановите как-нибудь сами.</p>
+                <p>Если купленный у нас товар поломается или заискрит,<br>а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br>Дом уж восстановите как-нибудь сами.</p>
               </li>
-              <li class="tab-content bg-img-credit">
+              <li class="tab-content bg-img-credit" id="tab-3">
                 <h3>Кредит</h3>
                 <p>Залезть в долговую яму стало проще!<br>Кредитные консультанты придут вам на помощь.</p>
                 <a href="#" class="button button-red">Отправить заявку</a>
@@ -258,7 +259,8 @@
         <section class="about">
           <h2>Компания «Техномарт»</h2>
           <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-          <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>Техномарт работает со многими транспортными компаниями:</p>
+          <p>Мы можем доставить ваш товар в самые отдаленные точки России!</p>
+          <p>Техномарт работает со многими транспортными компаниями:</p>
           <ul>
             <li>Деловые линии</li>
             <li>Автотрейдинг</li>
@@ -269,7 +271,8 @@
 
         <section class="contacts">
           <h2>Контакты</h2>
-          <p>Вы можете забрать товар сами,<br>заехав в наш офис:</p>
+          <p>Вы можете забрать товар сами,</p>
+          <p>заехав в наш офис:</p>
           <div class="mini-map">
             <a href="https://www.google.com/maps" target="_blank">
               <span class="visually-hidden">Ссылка на сервис карт</span>
@@ -317,8 +320,8 @@
               <a href="#" class="icon-insta"><span class="visually-hidden">Instagram</span></a>
             </li>
           </ul>
-          <p class="callback">Обратная связь:<br><a href="#">mail@htmlacademy.ru</a></p>
-          <p class="author">Разработанно -<br>
+          <p class="callback">Обратная связь: <a href="#">mail@htmlacademy.ru</a></p>
+          <p class="author">Разработанно -
             <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">htmlacademy.ru</a>
           </p>
         </div>
