--- a/catalog.html
+++ b/catalog.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Техномарт - Каталог</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&amp;subset=cyrillic">
@@ -67,7 +68,7 @@
       <div class="container">
         <section class="breadcrumbs">
           <ul class="list">
-            <li><a href="#" class="link icon-home">
+            <li><a href="index.html" class="link icon-home">
               <span class="visually-hidden">Главная</span>
             </a></li>
             <li><a href="#" class="link">Каталог</a></li>
