--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     <div class="container">
       <section class="modal modal-map">
         <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
-        <iframe src="https://yandex.ru/map-widget/v1/-/CBqmfYfaCA" width="940" height="448" frameborder="0"></iframe>
+        <iframe src="https://yandex.ru/map-widget/v1/-/CBqmfYfaCA" width="940" height="448"></iframe>
         <div class="image-map-wrapper">
           <img src="img/map.jpg" width="940" height="446" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
         </div>
