--- a/index.html
+++ b/index.html
@@ -15,13 +15,8 @@
         <div class="container flex-container">
           <a class="logo">Техномарт</a>
           <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-            <label class="visually-hidden" for="search-field">Поиск</label>
             <input type="search" id="search-field" class="search-field" name="search" placeholder="Поиск:">
-            <span class="icon-search">
-              <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
-                <path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
-              </svg>
-            </span>
+            <label class="icon-search" for="search-field"><span class="visually-hidden">Поиск</span></label>
           </form>
           <ul class="menu">
             <li><a href="#" class="link bookmark">Закладки: 0</a></li>
